cleaned the code style up somewhat at raceweek.cs-files

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Qualifying.razor
@@ -4,7 +4,7 @@
     <div id="qualy-table">
         @if (!loading)
         {
-            <CommonSession Drivers="@qualyDrivers"
+            <CommonSession Drivers="@QualyDrivers"
                            AmountRuns="@amountRuns"
                            EntryCutoff="@entryCutoff"
                            ProgressCutoff="@progressCutoff"
